# spotlight-ai

./: LICENSE  README.md  app.py  opencode.py  pyproject.toml  slash.py  ui.py
spotlight_ai/: __main__.py  app.py  cli.py  opencode.py  ui.py
spotlight_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
